# DROMPAplus

./: .gitignore  .gitmodules  CMakeLists.txt  ChangeLog.md  JacStats.sh  Makefile  README.md  alglib.h  cmdline.h  common.h  compare_bed2tss  compare_bed2tss.cpp  dd_gv.h  dd_main.cpp  dd_opt.h  dd_readfile.cpp  dd_readfile.h  draw.sh  drompa+.cpp  gene.sh  gene_bed.cpp  gene_bed.h  genometable.txt  gtf2refFlat.cpp  macro.h  multibed2gene.cpp  parse.sh  parse2wig+.cpp  parsefvp.pl  parsejaccard.pl  peak_occurance.cpp  pw_gc.cpp  pw_gc.h  pw_gv.h  pw_hamming.cpp  pw_hamming.h  pw_main.cpp  pw_makefile.cpp  pw_makefile.h  pw_readmapfile.cpp  (+14 more)
data/: genometable
data/S_cerevisiae/: ARS-oriDB_scer.txt  SGD_features.tab
data/ideogram/: T2T.tsv  dm3.tsv  dm6.tsv  getIdeo.R  hg19.tsv  hg38.tsv  mm10.tsv  mm9.tsv
data/mptable/: mptable.UCSC.T2T.36mer.flen150.txt  mptable.UCSC.T2T.50mer.flen150.txt  mptable.UCSC.ce10.36mer.flen150.txt  mptable.UCSC.danRer10.36mer.flen150.txt  mptable.UCSC.dm6.50mer.flen150.txt  mptable.UCSC.galGal3.50mer.flen150.txt  mptable.UCSC.galGal4.36mer.flen150.txt  mptable.UCSC.mm10.36mer.flen150.txt  mptable.UCSC.mm10.50mer.flen150.txt  mptable.UCSC.mm9.36mer.flen150.txt  mptable.UCSC.sacCer3.50mer.flen150.txt  mptable.UCSC.scer.36mer.flen150.txt  mptable.UCSC.scer.50mer.flen150.txt
docs/: Makefile  conf.py  index.rst  make.bat
docs/content/: 01.install.rst  02.parse2wig.rst  03.drompa.rst  04.GV.rst  05.profile.rst  0X.appendix.rst  Appendix.rst  Install.rst  Tutorial.rst  appendix.rst  drompa.rst  install.rst  parse2wig.rst
docs/content/drompa/: GENWIG.rst  GV.rst  (+6 more)
otherbins/: cpdf  drompa.heatmap.py  makemappabilitytable.pl  parsestats4DROMPAplus.pl
scripts/: gene.sh  parsejaccard.pl  sample.sh
src/: CMakeLists.txt  GCnormalization.cpp  GCnormalization.hpp  GeneAnnotation.hpp  GenomeCoverage.cpp  GenomeCoverage.hpp  MyType.hpp  ReadAnnotation.cpp  ReadAnnotation.hpp  ReadBpStatus.cpp  ReadBpStatus.hpp  ReadMpbldata.cpp  ReadMpbldata.hpp  SeqStatsDROMPA.hpp  WigStats.cpp  WigStats.hpp  color.hpp  compare_bed2tss.cpp  dd_chiadrop.cpp  dd_class.cpp  dd_class.hpp  dd_classfunc_draw.cpp  dd_command.cpp  dd_command.hpp  dd_draw.cpp  dd_draw.hpp  dd_draw_dataframe.cpp  dd_draw_dataframe.hpp  dd_draw_environment_variable.hpp  dd_draw_myfunc.hpp  dd_draw_p.hpp  dd_draw_pdfpage.cpp  dd_draw_pdfpage.hpp  dd_drawgenes.cpp  dd_gv.h  dd_gv.hpp  dd_init.cpp  dd_main.cpp  dd_opt.h  dd_opt.hpp  (+38 more)
src/SSP/: Makefile  README.md
src/common/: BpStatus.hpp  CMakeLists.txt  GeneAnnotation.hpp  ReadAnnotation.hpp  SeqStatsDROMPA.hpp  WigStats.cpp  WigStats.hpp  color.hpp  extendBedFormat.cpp  extendBedFormat.hpp  significancetest.cpp  significancetest.hpp  statistics.cpp  statistics.hpp  util.cpp  util.hpp  version.hpp
src/drompa/: CMakeLists.txt  ReadAnnotation.cpp  ReadAnnotation.hpp  color.cpp  color.hpp  dd_chiadrop.cpp  dd_classfunc_draw.cpp  dd_command.cpp  dd_command.hpp  dd_draw.cpp  dd_draw.hpp  dd_draw_dataframe.cpp  dd_draw_dataframe.hpp  dd_draw_environment_variable.hpp  dd_draw_myfunc.hpp  dd_draw_pdfpage.hpp  dd_drawgenes.cpp  dd_gv.hpp  dd_init.cpp  dd_profile.cpp  dd_profile.hpp  dd_readfile.cpp  dd_readfile.hpp  dd_sample_definition.cpp  dd_sample_definition.hpp
src/parse2wig/: CMakeLists.txt  GCnormalization.cpp  GCnormalization.hpp  GenomeCoverage.cpp  GenomeCoverage.hpp  ReadMpbldata.cpp  ReadMpbldata.hpp  pw_gv.hpp  pw_makefile.cpp  pw_makefile.hpp  pw_strShiftProfile.cpp
test/: CMakeLists.txt  dd_main.cpp
test/drompa/: CMakeLists.txt  dd_main.cpp
test/parse2wig/: CMakeLists.txt  pw_main.cpp
tutorial/: HICCUPS_looplist.txt  interactions.all.mango  parse2wig.sh  sample.human.sh  sample.yeast.sh
tutorial/GCcontents/: chr1-bs500000  chr10-bs500000  chr11-bs500000  chr12-bs500000  chr13-bs500000  chr14-bs500000  chr15-bs500000  chr16-bs500000  chr17-bs500000  chr18-bs500000  chr19-bs500000  chr2-bs500000  chr20-bs500000  chr21-bs500000  chr22-bs500000  chr3-bs500000  chr4-bs500000  chr5-bs500000  chr6-bs500000  chr7-bs500000  chr8-bs500000  chr9-bs500000  chrM-bs500000  chrX-bs500000  chrY-bs500000
tutorial/genedensity/: chr1-bs500000  chr10-bs500000  chr11-bs500000  chr12-bs500000  chr13-bs500000  chr14-bs500000  chr15-bs500000  chr16-bs500000  chr17-bs500000  chr18-bs500000  chr19-bs500000  chr2-bs500000  chr20-bs500000  chr21-bs500000  chr22-bs500000  chr3-bs500000  chr4-bs500000  chr5-bs500000  chr6-bs500000  chr7-bs500000  chr8-bs500000  chr9-bs500000  chrX-bs500000  chrY-bs500000
util/: Makefile  alglib.cpp  alglib.h  compare_bed2tss.cpp  gene_bed.cpp  gene_bed.h  genelist.txt  gtf2refFlat.cpp  macro.h  multibed2gene.cpp  peak_occurance.cpp  readdata.cpp  readdata.h  seq.h  warn.cpp  warn.h
(+52 files in other folders)
